# syslog-c

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  config.h  configure.ac  syslog
bench/: Makefile  Makefile.am  benchmark.c
src/: Makefile  Makefile.am  syslog.c  syslog.h
tests/: Makefile  Makefile.am  clar.c  main.c  syslog_message.c  syslog_message_with_structured_data.c  test.c  test.h
tests/clar/: fs.h  sandbox.h
